--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Undangan Digital</title>
+    <link rel="stylesheet" href="style.css" />
 
     <!-- CSS Bootstrap 5.3 -->
     <link
@@ -22,7 +23,18 @@
     />
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <section
+      id="hero"
+      class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
+    >
+      <main>
+        <h4>Kepada Bapak/Ibu/Saudara/i</h4>
+        <h1>Henry & Agnes</h1>
+        <p>Akan melangsungkan resepsi pernikahan dalam :</p>
+        <a href="#undangan" class="btn btn-lg">Lihat Undangan</a>
+      </main>
+    </section>
+    <h1 class="text-center">HELLO WORLD</h1>
 
     <!-- JS Bootstrap 5.3 -->
     <script
