tambah countdown, edit style, tambah bg image, tambah shadow font

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Simply Count Down -->
+    <link
+      rel="stylesheet"
+      href="simplycountdown/simplyCountdown.theme.default.css"
+    />
+    <script src="simplycountdown/simplyCountdown.min.js"></script>
   </head>
   <body>
     <section
@@ -31,7 +38,8 @@
         <h4>Kepada Bapak/Ibu/Saudara/i</h4>
         <h1>Henry & Agnes</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam :</p>
-        <a href="#undangan" class="btn btn-lg">Lihat Undangan</a>
+        <div class="simply-countdown"></div>
+        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
     <h1 class="text-center">HELLO WORLD</h1>
@@ -42,5 +50,23 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Simply Countdown -->
+    <script>
+      simplyCountdown(".simply-countdown", {
+        year: 2024, // required
+        month: 7, // required
+        day: 30, // required
+        hours: 8, // Default is 0 [0-23] integer
+        minutes: 30, // Default is 0 [0-59] integer
+        words: {
+          //words displayed into the countdown
+          days: { singular: "hari", plural: "hari" },
+          hours: { singular: "jam", plural: "jam" },
+          minutes: { singular: "menit", plural: "menit" },
+          seconds: { singular: "detik", plural: "detik" },
+        },
+      });
+    </script>
   </body>
 </html>
