--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h4>Kepada Bapak/Ibu/Saudara/i</h4>
         <h1>Henry & Agnes</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam :</p>
-        <div class="simply-countdown"></div>
+        <div id="simply-countdown" class="simply-countdown"></div>
         <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
@@ -55,10 +55,10 @@
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
-        month: 7, // required
-        day: 30, // required
-        hours: 8, // Default is 0 [0-23] integer
-        minutes: 30, // Default is 0 [0-59] integer
+        month: 4, // required
+        day: 27, // required
+        hours: 13, // Default is 0 [0-23] integer
+        minutes: 0, // Default is 0 [0-59] integer
         words: {
           //words displayed into the countdown
           days: { singular: "hari", plural: "hari" },
